ODE CHANGELOG
-------------

the rules for this file:
  * entries are sorted newest-first.
  * summarize sets of changes - dont reproduce every CVS log comment here.
  * don't ever delete anything.
  * keep the format consistent (79 char width, M/D/Y date format).

------------------------------------------------------------------------------
06/04/08 Daniel K. O.

        * Moved joints to ode/src/joints, converted them to true virtual
          methods.

06/02/08 Daniel K. O.

        * Added an Auto<T> template to step.cpp to handle memory deallocation.

05/09/08 Daniel K. O.

        * Applied patch #1335202: Contact Joint Motion (with some corrections),
          and added demo_motion.

05/01/08 Oleh_Derevenko

        * Memory leak in GIMPACT fixed (reported by Derek)

04/28/08 Oleh_Derevenko

        * Added possibility to collide a space of lower sublevel as a geometry
          against another space of a higher level with dSpaceCollide2.
          dSpaceSetSublevel/dSpaceGetSublevel are used for sublevel assignment/
          retrieval.

04/27/08 Oleh_Derevenko

        * Fixed incorrect memory copying which could lead to memory corruption
          in GIMPACT (luckily, in unused code)
        * Fixed possible memory read beyond the end of allocated buffer along
          with unnecessary extra memory copying in GIMPACT.
        * Fixed buffer reserve being incorrectly reset to zero for bitsets 
          what resulted in unnecessary memory reallocations in GIMPACT.
        * Implemented support for ability to run collision detection from
          multiple threads for separate spaces.
           
04/14/08 Oleh_Derevenko

        * Fixed possible memory corruption in new trimesh-trimesh collider
          in case if two degenerated triangles are checked against each other.

04/12/08 Oleh_Derevenko

        * Fixed sporadic assertion failure on vector normalization caused
          by small triangles degenerating into segments during space 